# api/internal/docs/generated/swagger.yaml
@@ -9,7 +9,7 @@ paths:
     put:
       consumes:
       - multipart/form-data
-      operationId: user.UpdateClient
+      operationId: jwt.Auth => user.UpdateClient
       parameters:
       - description: Client ID
         format: uuid
@@ -43,7 +43,7 @@ paths:
       - Client
   /client/{id}:
     delete:
-      operationId: user.DeleteClient
+      operationId: jwt.Auth => user.DeleteClient
       parameters:
       - description: Client ID
         format: uuid
@@ -68,7 +68,7 @@ paths:
     get:
       consumes:
       - multipart/form-data
-      operationId: user.GetClient
+      operationId: jwt.Auth => user.GetClient
       parameters:
       - description: Client ID
         format: uuid
@@ -139,7 +139,7 @@ paths:
     put:
       consumes:
       - multipart/form-data
-      operationId: user.UpdateEmployee
+      operationId: jwt.Auth => user.UpdateEmployee
       parameters:
       - description: Employee ID
         format: uuid
@@ -173,7 +173,7 @@ paths:
       - Employee
   /employee/{id}:
     delete:
-      operationId: user.DeleteEmployee
+      operationId: jwt.Auth => user.DeleteEmployee
       parameters:
       - description: Employee ID
         format: uuid
@@ -198,7 +198,7 @@ paths:
     get:
       consumes:
       - multipart/form-data
-      operationId: user.GetEmployee
+      operationId: jwt.Auth => user.GetEmployee
       parameters:
       - description: Employee ID
         format: uuid
@@ -342,7 +342,7 @@ paths:
     put:
       consumes:
       - multipart/form-data
-      operationId: user.CredentialUpdate
+      operationId: jwt.Auth => user.CredentialUpdate
       parameters:
       - default: user-thetiptop@yopmail.com
         description: Email address
